--- a/Alpaca/style.css
+++ b/Alpaca/style.css
@@ -8,13 +8,11 @@ body {
 }
 
 .header{
-    display: block;
-    position: absolute;
-    left: 13.5%;
-    width: 80%;
+    display: flex;
     font-weight: 1000;
     font-size:xx-large;
-    padding: 20px 0 10px 0;
+    justify-content: center;
+    align-items: center;
 }
 
 #external-container{
@@ -33,10 +31,13 @@ body {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); 
 }
 
+#image-section{
+  height: fit-content;;
+}
+
 .alpaca-preview {
     background-image: url(./alpaca/backgrounds/blue50.png);
-    width: 90%;
-    margin: 5% auto;
+    margin: 2%;
     border: 2px solid black;
     padding: 175px;
     position: relative;
@@ -129,22 +130,28 @@ body {
   }
 
 .Image-Buttons {
-    position: absolute;
-    bottom: 5%;
+    margin: 5%;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 90%;
+
 }
 
 #btn-random {
-    padding: 6px;
+    padding: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
     background-color:aliceblue;
     border: 2px solid black;
     border-radius: 10px;
     display: inline-flex;
     margin-right: 20px;
+
+
+}
+
+#btn-random:hover{
+  background-color: rgb(130, 195, 229);
+  transition: 400ms ease-in-out;
 }
 
 #btn-download {
@@ -155,6 +162,11 @@ body {
     border-radius: 10px;
     display: inline-flex;
     margin-left: 20px;
+}
+
+#btn-download:hover{
+  background-color: rgb(130, 195, 229);
+  transition: 400ms ease-in-out;
 }
 
 #image-section {
@@ -192,6 +204,11 @@ body {
     margin: 3px;
 }
 
+.accessory-button:hover{
+  background-color: rgb(130, 195, 229);
+  transition: 400ms ease-in-out;
+}
+
 .style-button{
     background-color:aliceblue;
     border: 2px solid #fff;
@@ -199,4 +216,13 @@ body {
     padding: 8px 15px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.15);
     margin: 3px;
+}
+
+.style-button:hover{
+  background-color: rgb(130, 195, 229);
+  transition: 400ms ease-in-out;
+}
+
+.fa-shake{
+  padding: 2.5px 5px 4px 5px;
 }
